test/error/iface/err2.rzy
interface
  Iface
    function funcA();
    function funcB();
  end

component
  Err2
    input
      in    : Iface;

    implementation elementary

    function in.funcA()
    end

    function in.funcB()
    end
    
    function in.funcC()
    end
    
  end

